# video-magnification

./: .gitignore  .python-version  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
src/: main.py
src/video_magnification/: cli.py  main.py  processing.py  slicer.py
src/video_magnification/core/: __init__.py  gauss_fft.py  laplace_butter.py  laplace_fft.py
src/video_magnification/utils/math/: __init__.py  powers.py  pyramid.py
src/video_magnification/utils/video/: __init__.py  buffers.py  exceptions.py  manipulation.py  video_file_reader.py
tests/: test_video_magnification.py
