[tool.poetry]
name = "video-magnification"
version = "0.1.0"
description = ""
authors = ["Krzysztof Piekarczyk <Krzysztof@piekarczyk.eu>"]

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
scipy = "^1.8.0"
opencv-python = "^4.6.0"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
mypy = "^0.942"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.scripts]
cli = "video_magnification.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
warn_unused_configs = true
follow_imports = "silent"
plugins = "numpy.typing.mypy_plugin"

[tool.black]
line-length = 120
target-version = ["py38"]
